src/assets/gateway-api/teste.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: teste
  name: teste
spec:
  containers:
    - image: nginx
      name: teste
      resources: {}
    - image: busybox
      name: tsaaaa
      command:
        - sh
        - -c
        - sleep 3600
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
